# Clibjpeg

./: CMakeLists.txt  Package.swift  README.md  filelist.txt
Sources/Clibjpeg/: Clibjpeg.swift
Tests/: LinuxMain.swift
Tests/ClibjpegTests/: ClibjpegTests.swift  XCTestManifests.swift
include/: module.modulemap
