add_library(Clibjpeg STATIC
  cdjpeg.c
cjpeg.c
djpeg.c
jaricom.c
jcapimin.c
jcapistd.c
jcarith.c
jccoefct.c
jccolext.c
jccolor.c
jcdctmgr.c
jchuff.c
jcicc.c
jcinit.c
jcmainct.c
jcmarker.c
jcmaster.c
jcomapi.c
jcparam.c
jcphuff.c
jcprepct.c
jcsample.c
jcstest.c
jctrans.c
jdapimin.c
jdapistd.c
jdarith.c
jdatadst-tj.c
jdatadst.c
jdatasrc-tj.c
jdatasrc.c
jdcoefct.c
jdcol565.c
jdcolext.c
jdcolor.c
jddctmgr.c
jdhuff.c
jdicc.c
jdinput.c
jdmainct.c
jdmarker.c
jdmaster.c
jdmerge.c
jdmrg565.c
jdmrgext.c
jdphuff.c
jdpostct.c
jdsample.c
jdtrans.c
jerror.c
jfdctflt.c
jfdctfst.c
jfdctint.c
jidctflt.c
jidctfst.c
jidctint.c
jidctred.c
jmemmgr.c
jmemnobs.c
jpegtran.c
jquant1.c
jquant2.c
jsimd_none.c
jstdhuff.c
jutils.c
rdbmp.c
rdcolmap.c
rdgif.c
rdjpgcom.c
rdppm.c
rdrle.c
rdswitch.c
rdtarga.c
tjbench.c
tjexample.c
tjunittest.c
tjutil.c
transupp.c
turbojpeg-jni.c
turbojpeg.c
wrbmp.c
wrgif.c
wrjpgcom.c
wrppm.c
wrrle.c
wrtarga.c)
set_target_properties(Clibjpeg PROPERTIES
  POSITION_INDEPENDENT_CODE YES)
target_include_directories(Clibjpeg PUBLIC
  include)
